--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
+    "@next/font": "^14.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
     "next": "14.1.0",
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "resolve-url": "^0.2.1",
     "sanity": "^3.28.0",
-    "styled-components": "^6.1.8"
+    "source-map-resolve": "^0.6.0",
+    "source-map-url": "^0.4.1",
+    "styled-components": "^6.1.8",
+    "urix": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
